[package]
name = "balatro-multiplayer-rlib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = "0.7.4"
mlua = { version = "0.9.1", features = ["lua51", "module", "async"] }
serde_json = "1.0.114"
socketioxide = "0.11.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
