[package]
name = "balatro-multiplayer-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
